[package]
name = "cloud-storage-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
directories = "5.0.1"
dirs = "5.0.1"
ego-tree = "0.9.0"
lazy_static = "1.5.0"
ratatui = "0.28.0"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tui-tree-widget = "0.22.0"
